<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="data_has_been_deleted" tools:ignore="MissingTranslation">Data has been deleted</string>
    <string name="close_map" tools:ignore="MissingTranslation">Close map</string>
    <string name="open_map" tools:ignore="MissingTranslation">Map</string>
    <string name="settlement_not_found" tools:ignore="MissingTranslation">Settlement not found</string>
    <string name="cancel" tools:ignore="MissingTranslation">Cancel</string>
    <string name="popular_cities" tools:ignore="MissingTranslation">Popular cities</string>
    <string name="moscow" tools:ignore="MissingTranslation">Moscow</string>
    <string name="saint_petersburg" tools:ignore="MissingTranslation">Saint Petersburg</string>
    <string name="tashkent" tools:ignore="MissingTranslation">Tashkent</string>
    <string name="kyiv" tools:ignore="MissingTranslation">Kyiv</string>
    <string name="kazan" tools:ignore="MissingTranslation">Kazan</string>
    <string name="ekaterinburg" tools:ignore="MissingTranslation">Ekaterinburg</string>
    <string name="novosibirsk" tools:ignore="MissingTranslation">Novosibirsk</string>
    <string name="minsk" tools:ignore="MissingTranslation">Minsk</string>
    <string name="almaty" tools:ignore="MissingTranslation">Almaty</string>
    <string name="perm" tools:ignore="MissingTranslation">Perm</string>
    <string name="tallinn" tools:ignore="MissingTranslation">Tallinn</string>
    <string name="erevan" tools:ignore="MissingTranslation">Erevan</string>
    <string name="ashkhabad" tools:ignore="MissingTranslation">Ashkhabad</string>
    <string name="bucharest" tools:ignore="MissingTranslation">Bucharest</string>
    <string name="voronezh" tools:ignore="MissingTranslation">Voronezh</string>
    <string name="volgograd" tools:ignore="MissingTranslation">Volgograd</string>
    <string name="tbilisi" tools:ignore="MissingTranslation">Tbilisi</string>
    <string name="astana" tools:ignore="MissingTranslation">Astana</string>
    <string name="baku" tools:ignore="MissingTranslation">Baku</string>
    <string name="omsk" tools:ignore="MissingTranslation">Omsk</string>
    <string name="bishkek" tools:ignore="MissingTranslation">Bishkek</string>
    <string name="riga" tools:ignore="MissingTranslation">Riga</string>
    <string name="vilnius" tools:ignore="MissingTranslation">Vilnius</string>
    <string name="krasnoyarsk" tools:ignore="MissingTranslation">Krasnoyarsk</string>
    <string name="chelyabinsk" tools:ignore="MissingTranslation">Chelyabinsk</string>
    <string name="samara" tools:ignore="MissingTranslation">Samara</string>
    <string name="tyumen" tools:ignore="MissingTranslation">Tyumen</string>
    <string name="manage_cities" tools:ignore="MissingTranslation">Manage cities</string>
    <string name="search" tools:ignore="MissingTranslation">Search</string>
    <string name="locate" tools:ignore="MissingTranslation">Locate</string>
    <string name="ok" translatable="false" tools:ignore="MissingTranslation">OK</string>
    <string name="undo" tools:ignore="MissingTranslation">Undo</string>
    <string name="loading">loading…</string>
    <string name="list_is_empty">No cities added</string>
    <string name="navigation_permissions_not_allowed">Navigation permissions not allowed</string>
    <string name="switch_on_gps">Switch on GPS</string>
    <string name="locating">Locating</string>
    <string name="title_activity_main2">MainActivity2</string>
</resources>