<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/b_back"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@null"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back"
        tools:ignore="ContentDescription,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/manage_cities"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="@+id/b_back"
        app:layout_constraintTop_toBottomOf="@+id/b_back" />

    <Button
        android:id="@+id/b_input_location"
        android:background="@drawable/rect_bgr"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:text="@string/search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="VisualLintButtonSize" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_city_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b_define_loc" />

    <Button
        android:id="@+id/b_define_loc"
        android:background="@drawable/rect_bgr"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/locate"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/b_input_location"
        app:layout_constraintTop_toBottomOf="@+id/b_input_location" />

    <Button
        android:id="@+id/b_map"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rect_bgr"
        android:layout_marginStart="8dp"
        android:text="@string/open_map"
        app:layout_constraintBottom_toBottomOf="@+id/b_define_loc"
        app:layout_constraintEnd_toEndOf="@+id/b_input_location"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/b_define_loc" />

    <TextView
        android:id="@+id/tv_state_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:elevation="2dp"
        android:gravity="center"
        android:text="@string/list_is_empty"
        android:textSize="34sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b_define_loc" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/map_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b_define_loc">

        <ImageButton
            android:id="@+id/b_zoom_in"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="16dp"
            android:elevation="2dp"
            android:background="@drawable/rect_bgr"
            android:src="@drawable/ic_zoom_in"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.40"
            tools:ignore="ContentDescription" />

        <ImageButton
            android:id="@+id/b_zoom_out"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:elevation="2dp"
            android:background="@drawable/rect_bgr"
            android:src="@drawable/ic_zoom_out"
            app:layout_constraintEnd_toEndOf="@+id/b_zoom_in"
            app:layout_constraintStart_toStartOf="@+id/b_zoom_in"
            app:layout_constraintTop_toBottomOf="@+id/b_zoom_in"
            tools:ignore="ContentDescription" />

        <com.yandex.mapkit.mapview.MapView
            android:id="@+id/mapview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </com.yandex.mapkit.mapview.MapView>

        <ImageButton
            android:id="@+id/b_current_loc"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/rect_bgr"
            android:src="@drawable/ic_near"
            app:layout_constraintBottom_toTopOf="@+id/b_save_point"
            app:layout_constraintEnd_toEndOf="@+id/b_zoom_out"
            app:layout_constraintStart_toStartOf="@+id/b_zoom_out"
            app:layout_constraintTop_toBottomOf="@+id/b_zoom_out"
            tools:ignore="ContentDescription" />

        <Button
            android:id="@+id/b_save_point"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/ok"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <LinearLayout
            android:layout_width="1dp"
            android:layout_height="100dp"
            android:background="@color/gray_700"
            android:elevation="2dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="1dp"
            android:background="@color/gray_700"
            android:elevation="2dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:background="@null"
        android:src="@drawable/ic_search"
        app:layout_constraintBottom_toBottomOf="@+id/b_input_location"
        app:layout_constraintStart_toStartOf="@+id/b_input_location"
        app:layout_constraintTop_toTopOf="@+id/b_input_location"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:src="@drawable/ic_place"
        app:layout_constraintBottom_toBottomOf="@+id/b_define_loc"
        app:layout_constraintStart_toStartOf="@+id/b_define_loc"
        app:layout_constraintTop_toTopOf="@+id/b_define_loc"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:src="@drawable/ic_map"
        app:layout_constraintBottom_toBottomOf="@+id/b_map"
        app:layout_constraintStart_toStartOf="@+id/b_map"
        app:layout_constraintTop_toTopOf="@+id/b_map"
        tools:ignore="ContentDescription" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"/>

</androidx.constraintlayout.widget.ConstraintLayout>